--- a/web/packages/shared/UI_KIT/Carousel/Carousel.module.scss
+++ b/web/packages/shared/UI_KIT/Carousel/Carousel.module.scss
@@ -1,7 +1,8 @@
 .wrapper{
   overflow: hidden;
-  width: 100%;
+  width: 720px;
   background: #222222;
+  height: 480px;
 }
 
 .wrapper_full{
@@ -14,7 +15,7 @@
 
 .item{
   width: 100%;
-  height: 600px;
+  height: 480px;
 }
 
 .item_full{
