--- a/web/packages/shared/UI_KIT/Carousel/Carousel.module.scss
+++ b/web/packages/shared/UI_KIT/Carousel/Carousel.module.scss
@@ -22,3 +22,25 @@
   width: 100%;
   height: 95vh;
 }
+
+@media only screen and (max-width: 	1320px){
+  .wrapper{
+    width: 720px;
+    height: 480px;
+  }
+  .item{
+    width: 100%;
+    height: 480px;
+  }
+}
+
+
+@media only screen and  (max-width: 767px){
+  .wrapper{
+    width: 280px;
+    height: 140px;
+  }
+  .item{
+    height: 140px;
+  }
+}
