--- a/web/services/host/src/components/App.module.scss
+++ b/web/services/host/src/components/App.module.scss
@@ -14,7 +14,20 @@ body {
     position: relative;
 }
 #app {
+    padding-top: 3rem;
     position: relative;
     min-height: 100vh;
-    padding-bottom: 20px;
+    padding-bottom: 150px;
+}
+
+@media only screen and (max-width: 	1320px){
+    #app {
+        padding-bottom: 150px;
+    }
+}
+
+@media only screen and  (max-width: 767px){
+    #app {
+        padding-bottom: 450px;
+    }
 }
