--- a/web/services/host/src/components/Navbar/Navbar.module.scss
+++ b/web/services/host/src/components/Navbar/Navbar.module.scss
@@ -1,9 +1,8 @@
-nav{
+.navbar{
   padding: 0 1rem;
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  position: relative;
-  width: 100%;
+}
 
+.avatar{
+  width: 2rem;
+  height: 2rem;
 }
