--- a/web/services/host/src/components/Navbar/Navbar.module.scss
+++ b/web/services/host/src/components/Navbar/Navbar.module.scss
@@ -1,3 +1,92 @@
 .navbar{
   padding: 0 1rem;
 }
+
+
+.navbar {
+background-color: #fff;
+box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+display: flex;
+justify-content: space-between;
+align-items: center;
+padding: 10px 10px;
+position: fixed;
+width: 100%;
+z-index: 100;
+}
+
+.navbar-brand {
+font-size: 24px;
+font-weight: bold;
+text-decoration: none;
+color: #333;
+}
+
+.search {
+    position: relative;
+    width: 100%;
+    max-width: 300px;
+    margin: 0 auto;
+}
+
+.searchInput {
+    border-radius: 30px;
+    border: 1px solid #ccc;
+    padding: 5px 5px 5px 5px;
+    font-size: 1rem;
+    width: 100%;
+    box-sizing: border-box;
+}
+
+.searchButton {
+    position: absolute;
+    top: 0px;
+    left: 95%;
+    transform: translateX(-50%);
+    border-radius: 50%;
+    padding: 5px;
+}
+
+.menu-icon {
+cursor: pointer;
+font-size: 24px;
+margin-right: 20px;
+}
+
+
+
+.offcanvasButton {
+    display: block;
+    width: 100%;
+    padding: 10px 15px;
+    margin-bottom: 10px;
+    color: #fff;
+    background-color: #007bff;
+    border: 1px solid #007bff;
+    border-radius: 5px;
+    text-align: center;
+    text-decoration: none;
+    transition: background-color 0.3s ease;
+}
+
+.offcanvasButton:hover {
+    background-color: #0056b3;
+}
+
+.exitButton {
+    display: block;
+    width: 100%;
+    padding: 10px 15px;
+    margin-top: 20px;
+    color: #fff;
+    background-color: #dc3545;
+    border: 1px solid #dc3545;
+    border-radius: 5px;
+    text-align: center;
+    text-decoration: none;
+    transition: background-color 0.3s ease;
+}
+
+.exitButton:hover {
+    background-color: #c82333;
+}
