--- a/web/services/host/src/components/Navbar/Navbar.module.scss
+++ b/web/services/host/src/components/Navbar/Navbar.module.scss
@@ -1,3 +1,221 @@
 .navbar{
   padding: 0 1rem;
 }
+
+
+.default {
+    display: block;
+    color: white;
+    min-width: 10%;
+    background: white;
+    --bs-btn-active-bg: #677a71;
+    --bs-btn-active-border-color: #677a71;
+    --bs-btn-hover-bg: #7f968b;
+    --bs-btn-hover-border-color: #7f968b;
+}
+
+.list {
+    border-radius: var(--bs-border-radius);
+    position: absolute;
+    min-width: 10%;
+    z-index: 2;
+    max-height: 100px;
+    border: 1px solid var(--bs-border-color);
+    background: #89A497;
+    overflow-x: hidden;
+    overflow-y: scroll;
+}
+
+.list::-webkit-scrollbar {
+    width: 5px;
+}
+
+/* scrollbar track */
+.list::-webkit-scrollbar-track {
+    background: #89A497;
+}
+
+/* scrollbar handle */
+.list::-webkit-scrollbar-thumb {
+    border-radius: 1rem;
+    background-color: #677a71;
+}
+
+
+
+/* Стили для названия события */
+.event-name {
+    border-radius: 5px; /* Закругленные углы */
+    padding: 8px;
+}
+
+/* Стили для адреса мероприятия */
+.event-address {
+    border-radius: 5px; /* Закругленные углы */
+    padding: 8px;
+}
+
+/* Стили для кнопки "Выберите категорию" */
+.select-category-button {
+    background-color: #ffc107; /* Тепло желтый цвет */
+    border-radius: 5px; /* Закругленные углы */
+    padding: 8px 16px;
+    color: #fff;
+    border: none;
+    cursor: pointer;
+}
+
+.select-category-button:hover {
+    background-color: #ffca28; /* Применить тепло желтого цвета при наведении */
+}
+
+/* Стили для кнопки "Применить" */
+.apply-button {
+    background-color: #28a745; /* Тепло зеленый цвет */
+    border-radius: 5px; /* Закругленные углы */
+    padding: 8px 16px;
+    color: #fff;
+    border: none;
+    cursor: pointer;
+}
+
+.apply-button:hover {
+    background-color: #218838; /* Применить тепло зеленого цвета при наведении */
+}
+
+
+.search-setting-text {
+    margin-top: 8px;
+    margin-left: 12px;
+    font-size: 14px;
+    color: #333;
+    text-align: left;
+}
+
+.navbar {
+background-color: #fff;
+box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+display: flex;
+justify-content: space-between;
+align-items: center;
+padding: 10px 10px;
+position: fixed;
+width: 100%;
+z-index: 100;
+}
+
+.navbar-brand {
+font-size: 24px;
+font-weight: bold;
+text-decoration: none;
+color: #333;
+}
+
+.search {
+    position: relative;
+    width: 100%;
+    max-width: 300px;
+    margin: 0 auto;
+}
+
+.searchInput {
+    border-radius: 30px;
+    border: 1px solid #ccc;
+    padding: 5px 5px 5px 5px;
+    font-size: 1rem;
+    width: 100%;
+    box-sizing: border-box;
+}
+
+.searchButton {
+    position: absolute;
+    top: 0px;
+    left: 95%;
+    transform: translateX(-50%);
+    border-radius: 50%;
+    padding: 5px;
+}
+
+.menu-icon {
+cursor: pointer;
+font-size: 24px;
+margin-right: 20px;
+}
+
+.offcanvasButtons {
+    display: flex;
+    flex-wrap: nowrap; /* Запретить перенос элементов на новую строку */
+    overflow-x: auto; /* Добавить горизонтальную прокрутку, если кнопок слишком много */
+}
+
+.offcanvasButton,
+.exitButton,
+.clipsButton {
+    flex: 0 0 auto; /* Указать, что элементы не должны растягиваться и не должны сжиматься */
+    padding: 10px 15px;
+    margin-right: 10px; /* Добавить небольшой отступ между кнопками */
+    color: #000; /* Черный цвет текста */
+    background-color: transparent; /* Прозрачный фон кнопок */
+    border: none;
+    border-radius: 5px;
+    text-align: left; /* Выравнивание текста слева */
+    text-decoration: none;
+    transition: background-color 0.3s ease;
+    font-weight: normal; /* Установка жирности текста на нормальную */
+}
+
+.offcanvasButton:hover,
+.exitButton:hover,
+.clipsButton:hover {
+    background-color: #007bff; /* Цвет фона кнопок при наведении */
+    color: #fff; /* Белый цвет текста при наведении */
+}
+
+.exitButton {
+    flex: 0 0 auto;
+    padding: 10px 15px;
+    margin-right: 10px;
+    color: #fff;
+    background-color: #dc3545; /* Красный цвет фона кнопки */
+    border: none;
+    border-radius: 5px;
+    text-align: left;
+    text-decoration: none;
+    transition: background-color 0.3s ease;
+    font-weight: normal;
+}
+
+.exitButton:hover {
+    background-color: #c82333; /* Цвет фона кнопки при наведении */
+}
+
+.loginButton,
+.exitButton {
+    flex: 0 0 auto;
+    padding: 10px 15px;
+    margin-right: 10px;
+    color: #fff;
+    border: none;
+    border-radius: 5px;
+    text-align: left;
+    text-decoration: none;
+    transition: background-color 0.3s ease;
+    font-weight: normal;
+}
+
+.loginButton {
+    background-color: #007bff; /* Синий цвет фона для кнопки "Войти" */
+}
+
+.exitButton {
+    background-color: #dc3545; /* Красный цвет фона для кнопки "Выход" */
+}
+
+.loginButton:hover,
+.exitButton:hover {
+    background-color: #0056b3; /* Синий цвет фона при наведении для кнопки "Войти" */
+}
+
+.exitButton:hover {
+    background-color: #c82333; /* Красный цвет фона при наведении для кнопки "Выход" */
+}
