--- a/web/packages/shared/UI_KIT/Carousel/Media/Carousel.module.scss
+++ b/web/packages/shared/UI_KIT/Carousel/Media/Carousel.module.scss
@@ -1,4 +1,58 @@
-.wrapper{
+.wrapper {
+    overflow: hidden;
+    width: 350px;
+    background: #222222;
+    height: 160px;
+}
+
+.wrapper_full {
+    overflow: hidden;
+    width: 100%;
+    height: 95vh;
+    background: #222222;
+}
+
+.custom-video {
+    width: 100%;
+    height: 100%;
+}
+
+.item {
+    width: 100%;
+    height: 480px;
+}
+
+.item_full {
+    width: 100%;
+    height: 95vh;
+}
+
+@media only screen and (max-width: 1320px) {
+    .wrapper {
+        width: 280px;
+        height: 200px;
+    }
+
+    .item {
+        width: 100%;
+        height: 480px;
+    }
+}
+
+
+@media only screen and (max-width: 767px) {
+    .wrapper {
+        width: 140px;
+        height: 100px;
+    }
+
+    .item {
+        height: 140px;
+    }
+}
+
+
+/*.wrapper{
   overflow: hidden;
   width: 720px;
   background: #222222;
@@ -43,4 +97,4 @@
   .item{
     height: 140px;
   }
-}
+}*/
