--- a/web/services/host/src/components/Navbar/Navbar.module.scss
+++ b/web/services/host/src/components/Navbar/Navbar.module.scss
@@ -2,6 +2,18 @@
   padding: 0 1rem;
 }
 
+.drop_down{
+    padding: 5rem 1rem;
+}
+
+
+
+
+
+
+
+
+
 
 .default {
     display: block;
@@ -43,22 +55,22 @@
 
 
 
-/* Стили для названия события */
+/* пїЅпїЅпїЅпїЅпїЅ пїЅпїЅпїЅ пїЅпїЅпїЅпїЅпїЅпїЅпїЅпїЅ пїЅпїЅпїЅпїЅпїЅпїЅпїЅ */
 .event-name {
-    border-radius: 5px; /* Закругленные углы */
+    border-radius: 5px; /* пїЅпїЅпїЅпїЅпїЅпїЅпїЅпїЅпїЅпїЅпїЅпїЅ пїЅпїЅпїЅпїЅ */
     padding: 8px;
 }
 
-/* Стили для адреса мероприятия */
+/* пїЅпїЅпїЅпїЅпїЅ пїЅпїЅпїЅ пїЅпїЅпїЅпїЅпїЅпїЅ пїЅпїЅпїЅпїЅпїЅпїЅпїЅпїЅпїЅпїЅпїЅ */
 .event-address {
-    border-radius: 5px; /* Закругленные углы */
+    border-radius: 5px; /* пїЅпїЅпїЅпїЅпїЅпїЅпїЅпїЅпїЅпїЅпїЅпїЅ пїЅпїЅпїЅпїЅ */
     padding: 8px;
 }
 
-/* Стили для кнопки "Выберите категорию" */
+/* пїЅпїЅпїЅпїЅпїЅ пїЅпїЅпїЅ пїЅпїЅпїЅпїЅпїЅпїЅ "пїЅпїЅпїЅпїЅпїЅпїЅпїЅпїЅ пїЅпїЅпїЅпїЅпїЅпїЅпїЅпїЅпїЅ" */
 .select-category-button {
-    background-color: #ffc107; /* Тепло желтый цвет */
-    border-radius: 5px; /* Закругленные углы */
+    background-color: #ffc107; /* пїЅпїЅпїЅпїЅпїЅ пїЅпїЅпїЅпїЅпїЅпїЅ пїЅпїЅпїЅпїЅ */
+    border-radius: 5px; /* пїЅпїЅпїЅпїЅпїЅпїЅпїЅпїЅпїЅпїЅпїЅпїЅ пїЅпїЅпїЅпїЅ */
     padding: 8px 16px;
     color: #fff;
     border: none;
@@ -66,13 +78,13 @@
 }
 
 .select-category-button:hover {
-    background-color: #ffca28; /* Применить тепло желтого цвета при наведении */
+    background-color: #ffca28; /* пїЅпїЅпїЅпїЅпїЅпїЅпїЅпїЅпїЅ пїЅпїЅпїЅпїЅпїЅ пїЅпїЅпїЅпїЅпїЅпїЅпїЅ пїЅпїЅпїЅпїЅпїЅ пїЅпїЅпїЅ пїЅпїЅпїЅпїЅпїЅпїЅпїЅпїЅпїЅ */
 }
 
-/* Стили для кнопки "Применить" */
+/* пїЅпїЅпїЅпїЅпїЅ пїЅпїЅпїЅ пїЅпїЅпїЅпїЅпїЅпїЅ "пїЅпїЅпїЅпїЅпїЅпїЅпїЅпїЅпїЅ" */
 .apply-button {
-    background-color: #28a745; /* Тепло зеленый цвет */
-    border-radius: 5px; /* Закругленные углы */
+    background-color: #28a745; /* пїЅпїЅпїЅпїЅпїЅ пїЅпїЅпїЅпїЅпїЅпїЅпїЅ пїЅпїЅпїЅпїЅ */
+    border-radius: 5px; /* пїЅпїЅпїЅпїЅпїЅпїЅпїЅпїЅпїЅпїЅпїЅпїЅ пїЅпїЅпїЅпїЅ */
     padding: 8px 16px;
     color: #fff;
     border: none;
@@ -80,7 +92,7 @@
 }
 
 .apply-button:hover {
-    background-color: #218838; /* Применить тепло зеленого цвета при наведении */
+    background-color: #218838; /* пїЅпїЅпїЅпїЅпїЅпїЅпїЅпїЅпїЅ пїЅпїЅпїЅпїЅпїЅ пїЅпїЅпїЅпїЅпїЅпїЅпїЅпїЅ пїЅпїЅпїЅпїЅпїЅ пїЅпїЅпїЅ пїЅпїЅпїЅпїЅпїЅпїЅпїЅпїЅпїЅ */
 }
 
 
@@ -103,6 +115,7 @@ position: fixed;
 width: 100%;
 z-index: 100;
 }
+
 
 .navbar-brand {
 font-size: 24px;
@@ -144,31 +157,31 @@ margin-right: 20px;
 
 .offcanvasButtons {
     display: flex;
-    flex-wrap: nowrap; /* Запретить перенос элементов на новую строку */
-    overflow-x: auto; /* Добавить горизонтальную прокрутку, если кнопок слишком много */
+    flex-wrap: nowrap; /* пїЅпїЅпїЅпїЅпїЅпїЅпїЅпїЅпїЅ пїЅпїЅпїЅпїЅпїЅпїЅпїЅ пїЅпїЅпїЅпїЅпїЅпїЅпїЅпїЅпїЅ пїЅпїЅ пїЅпїЅпїЅпїЅпїЅ пїЅпїЅпїЅпїЅпїЅпїЅ */
+    overflow-x: auto; /* пїЅпїЅпїЅпїЅпїЅпїЅпїЅпїЅ пїЅпїЅпїЅпїЅпїЅпїЅпїЅпїЅпїЅпїЅпїЅпїЅпїЅпїЅ пїЅпїЅпїЅпїЅпїЅпїЅпїЅпїЅпїЅ, пїЅпїЅпїЅпїЅ пїЅпїЅпїЅпїЅпїЅпїЅ пїЅпїЅпїЅпїЅпїЅпїЅпїЅ пїЅпїЅпїЅпїЅпїЅ */
 }
 
 .offcanvasButton,
 .exitButton,
 .clipsButton {
-    flex: 0 0 auto; /* Указать, что элементы не должны растягиваться и не должны сжиматься */
+    flex: 0 0 auto; /* пїЅпїЅпїЅпїЅпїЅпїЅпїЅ, пїЅпїЅпїЅ пїЅпїЅпїЅпїЅпїЅпїЅпїЅпїЅ пїЅпїЅ пїЅпїЅпїЅпїЅпїЅпїЅ пїЅпїЅпїЅпїЅпїЅпїЅпїЅпїЅпїЅпїЅпїЅпїЅпїЅ пїЅ пїЅпїЅ пїЅпїЅпїЅпїЅпїЅпїЅ пїЅпїЅпїЅпїЅпїЅпїЅпїЅпїЅпїЅ */
     padding: 10px 15px;
-    margin-right: 10px; /* Добавить небольшой отступ между кнопками */
-    color: #000; /* Черный цвет текста */
-    background-color: transparent; /* Прозрачный фон кнопок */
+    margin-right: 10px; /* пїЅпїЅпїЅпїЅпїЅпїЅпїЅпїЅ пїЅпїЅпїЅпїЅпїЅпїЅпїЅпїЅпїЅ пїЅпїЅпїЅпїЅпїЅпїЅ пїЅпїЅпїЅпїЅпїЅ пїЅпїЅпїЅпїЅпїЅпїЅпїЅпїЅ */
+    color: #000; /* пїЅпїЅпїЅпїЅпїЅпїЅ пїЅпїЅпїЅпїЅ пїЅпїЅпїЅпїЅпїЅпїЅ */
+    background-color: transparent; /* пїЅпїЅпїЅпїЅпїЅпїЅпїЅпїЅпїЅпїЅ пїЅпїЅпїЅ пїЅпїЅпїЅпїЅпїЅпїЅ */
     border: none;
     border-radius: 5px;
-    text-align: left; /* Выравнивание текста слева */
+    text-align: left; /* пїЅпїЅпїЅпїЅпїЅпїЅпїЅпїЅпїЅпїЅпїЅпїЅ пїЅпїЅпїЅпїЅпїЅпїЅ пїЅпїЅпїЅпїЅпїЅ */
     text-decoration: none;
     transition: background-color 0.3s ease;
-    font-weight: normal; /* Установка жирности текста на нормальную */
+    font-weight: normal; /* пїЅпїЅпїЅпїЅпїЅпїЅпїЅпїЅпїЅ пїЅпїЅпїЅпїЅпїЅпїЅпїЅпїЅ пїЅпїЅпїЅпїЅпїЅпїЅ пїЅпїЅ пїЅпїЅпїЅпїЅпїЅпїЅпїЅпїЅпїЅпїЅ */
 }
 
 .offcanvasButton:hover,
 .exitButton:hover,
 .clipsButton:hover {
-    background-color: #007bff; /* Цвет фона кнопок при наведении */
-    color: #fff; /* Белый цвет текста при наведении */
+    background-color: #007bff; /* пїЅпїЅпїЅпїЅ пїЅпїЅпїЅпїЅ пїЅпїЅпїЅпїЅпїЅпїЅ пїЅпїЅпїЅ пїЅпїЅпїЅпїЅпїЅпїЅпїЅпїЅпїЅ */
+    color: #fff; /* пїЅпїЅпїЅпїЅпїЅ пїЅпїЅпїЅпїЅ пїЅпїЅпїЅпїЅпїЅпїЅ пїЅпїЅпїЅ пїЅпїЅпїЅпїЅпїЅпїЅпїЅпїЅпїЅ */
 }
 
 .exitButton {
@@ -176,7 +189,7 @@ margin-right: 20px;
     padding: 10px 15px;
     margin-right: 10px;
     color: #fff;
-    background-color: #dc3545; /* Красный цвет фона кнопки */
+    background-color: #dc3545; /* пїЅпїЅпїЅпїЅпїЅпїЅпїЅ пїЅпїЅпїЅпїЅ пїЅпїЅпїЅпїЅ пїЅпїЅпїЅпїЅпїЅпїЅ */
     border: none;
     border-radius: 5px;
     text-align: left;
@@ -186,7 +199,7 @@ margin-right: 20px;
 }
 
 .exitButton:hover {
-    background-color: #c82333; /* Цвет фона кнопки при наведении */
+    background-color: #c82333; /* пїЅпїЅпїЅпїЅ пїЅпїЅпїЅпїЅ пїЅпїЅпїЅпїЅпїЅпїЅ пїЅпїЅпїЅ пїЅпїЅпїЅпїЅпїЅпїЅпїЅпїЅпїЅ */
 }
 
 .loginButton,
@@ -204,18 +217,18 @@ margin-right: 20px;
 }
 
 .loginButton {
-    background-color: #007bff; /* Синий цвет фона для кнопки "Войти" */
+    background-color: #007bff; /* пїЅпїЅпїЅпїЅпїЅ пїЅпїЅпїЅпїЅ пїЅпїЅпїЅпїЅ пїЅпїЅпїЅ пїЅпїЅпїЅпїЅпїЅпїЅ "пїЅпїЅпїЅпїЅпїЅ" */
 }
 
 .exitButton {
-    background-color: #dc3545; /* Красный цвет фона для кнопки "Выход" */
+    background-color: #dc3545; /* пїЅпїЅпїЅпїЅпїЅпїЅпїЅ пїЅпїЅпїЅпїЅ пїЅпїЅпїЅпїЅ пїЅпїЅпїЅ пїЅпїЅпїЅпїЅпїЅпїЅ "пїЅпїЅпїЅпїЅпїЅ" */
 }
 
 .loginButton:hover,
 .exitButton:hover {
-    background-color: #0056b3; /* Синий цвет фона при наведении для кнопки "Войти" */
+    background-color: #0056b3; /* пїЅпїЅпїЅпїЅпїЅ пїЅпїЅпїЅпїЅ пїЅпїЅпїЅпїЅ пїЅпїЅпїЅ пїЅпїЅпїЅпїЅпїЅпїЅпїЅпїЅпїЅ пїЅпїЅпїЅ пїЅпїЅпїЅпїЅпїЅпїЅ "пїЅпїЅпїЅпїЅпїЅ" */
 }
 
 .exitButton:hover {
-    background-color: #c82333; /* Красный цвет фона при наведении для кнопки "Выход" */
+    background-color: #c82333; /* пїЅпїЅпїЅпїЅпїЅпїЅпїЅ пїЅпїЅпїЅпїЅ пїЅпїЅпїЅпїЅ пїЅпїЅпїЅ пїЅпїЅпїЅпїЅпїЅпїЅпїЅпїЅпїЅ пїЅпїЅпїЅ пїЅпїЅпїЅпїЅпїЅпїЅ "пїЅпїЅпїЅпїЅпїЅ" */
 }
