--- a/web/services/user/src/components/Promo/Promo.module.scss
+++ b/web/services/user/src/components/Promo/Promo.module.scss
@@ -1,17 +1,38 @@
 .place_1{
+  position: absolute;
+  z-index: 0;
+  right: 100px;
+  top:-50%;
   width: 200px;
+  height: 200px;
 }
 
 .place_2{
-  width: 200px;
+  position: absolute;
+  z-index: -1;
+  right: 30px;
+  top:-25%;
+  width: 150px;
+  height: 150px;
+  transform: rotate(45deg);
 }
 
 .place_3{
-  width: 200px;
+  position: absolute;
+  z-index: -1;
+  left: 0;
+  top:-25%;
+  width: 150px;
+  height: 150px;
 }
 
 .place_4{
+  position: absolute;
+  z-index: -0;
+  left: 100px;
+  top:-50%;
   width: 200px;
+  height: 200px;
 }
 
 .text_zone{
@@ -22,7 +43,16 @@
   background: rgba(0,0,0,0);
 }
 
+.all{
+  min-height: 300px;
+  overflow: hidden;
+}
+
 @media only screen and (max-width: 767px) {
+  .all{
+    min-height: 200px;
+    background: rgba(0,0,0,0.66);
+  }
   .back_img{
     z-index: -1;
     opacity: 0.6;
@@ -32,8 +62,7 @@
     color: white;
     text-align: center;
     position: absolute;
-    background: rgba(0,0,0,0.6);
-    top: 0%;
+    top: 0;
     height: 100%;
   }
 }
